--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
+    "react-slider": "^2.0.6",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
